prac_3/Calc.atg
COMPILER Calc  $CN
/* Simple four function calculator
   P.D. Terry, Rhodes University, 2017 
   Edited by Adam Purdon, g18p8803    */

CHARACTERS
  digit      = "0123456789" .
  hexdigit   = digit + "ABCDEF" .

TOKENS
  decNumber  = digit { digit } .
  hexNumber  = "$" hexdigit { hexdigit } .

IGNORE CHR(0) .. CHR(31)

PRODUCTIONS
  Calc       = { Expression "=" } EOF .
  Expression = Term { "+" Term  |  "-" Term } .
  Term       = Factor { "*" Factor |  "/" Factor | "^" Factor } .
  Factor     = "sqrt(" Expression ")" | "(" Expression ")" | [ "+" | "-" ] ( decNumber [ "." decNumber ] | hexNumber ) .
END Calc.
